--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-test1"
+name = "bfjit"
 version = "0.1.0"
 authors = ["Matej <dobrakmato@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 memmap = "0.7.0"
 bitflags = "1.0.4"
+clap = "2.33.0"
 
 [dev-dependencies]
 matches = "0.1.8"
